# myfit

./: .gitattributes  .gitignore  GUARDRAILS.md  PROMPT_CONTINUE.md  README.md  SESSION_STATE.md  SPEC.md  pyproject.toml
data/review/: REVIEW.md  REVIEW_BATCH3.md  TODO_round6.md  figure_robustness_audit.md  figure_robustness_checklist.md  flagged_original.json  flagged_round2.json  flagged_round3.json  flagged_round4.json  flagged_round5.json  full_review_notes.json  refactor_plan.md  round3_notes.json  round4_notes.json
data/review_bent/: flagged_bent.json  index.md
docs/: catalog_coverage.md  recipes.md
references/: aldrich_p178_179_notes.md  smplx_landmark_review.json  smplx_vertex_landmarks.md
references/aldrich/: aldrich_p178_179_notes.md
references/dpm_videos/bodice_back/: transcript.srt  transcript.txt
references/dpm_videos/bodice_front/: transcript.srt  transcript.txt
references/dpm_videos/bodice_measurements/: transcript.srt  (+1 more)
references/seamly/: README.md  extraction_audit.md
scripts/: blender_landmark_review.py  blender_verify_landmarks.py  compare_truetoform.py  dump_recipe_table.py  export_seamlyme.py  extract_bent_arm.py  generate_review_html.py  ingest_video.sh  inspect_stray.py  pick_smplx_landmarks.py  propose_smplx_landmarks.py  render_all.sh  render_measurement_review.py  run_scan.py  scan_gui.py  verify_phase0.py
src/body_scanner/: __init__.py
src/tailor_twin/: __init__.py  cli.py  preflight.py  scan.py
tests/: test_cross_figure_robustness.py  test_gui_app.py  test_gui_forms.py  test_gui_viewer.py  test_yaiza_snapshot.py
(+96 files in other folders)
